# c

./: .gitignore  CMakeLists.txt  Makefile  ls.c
gfx/: CMakeLists.txt
gfx/src/: gfx.c  gfx.cpp  res_texture.c  shader_utils.cpp  shader_utils.h  triangle.f.glsl  triangle.v.glsl
ls/: CMakeLists.txt
src/ls/: ls.c
